--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             padding: 0;
         }
     </style>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src *;">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
